# ChangeLog for dev-python/setuptools
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/setuptools/ChangeLog,v 1.216 2013/09/16 05:55:08 radhermit Exp $

*setuptools-1.1.5 (16 Sep 2013)

  16 Sep 2013; Tim Harder <radhermit@gentoo.org> +setuptools-1.1.5.ebuild:
  Version bump.

  06 Sep 2013; Agostino Sarubbo <ago@gentoo.org> setuptools-0.8-r1.ebuild:
  Stable for sparc, wrt bug #479980

*setuptools-1.1.3 (06 Sep 2013)

  06 Sep 2013; Tim Harder <radhermit@gentoo.org> +setuptools-1.1.3.ebuild:
  Version bump.

  05 Sep 2013; Michał Górny <mgorny@gentoo.org> setuptools-0.6.30-r1.ebuild,
  setuptools-0.6.33.ebuild, setuptools-0.6.45-r1.ebuild,
  setuptools-0.8-r1.ebuild, setuptools-0.9.8-r1.ebuild, setuptools-1.0.ebuild,
  setuptools-1.1.ebuild, setuptools-9999.ebuild:
  Clean up PYTHON_COMPAT from old implementations.

*setuptools-1.1.1 (04 Sep 2013)

  04 Sep 2013; Tim Harder <radhermit@gentoo.org> +setuptools-1.1.1.ebuild:
  Version bump, dropped masked PYTHON_COMPAT implementations.

  29 Aug 2013; Agostino Sarubbo <ago@gentoo.org> setuptools-0.8-r1.ebuild:
  Stable for ia64, wrt bug #479980

*setuptools-1.1 (27 Aug 2013)

  27 Aug 2013; Tim Harder <radhermit@gentoo.org> +setuptools-1.1.ebuild:
  Version bump.

*setuptools-1.0 (25 Aug 2013)

  25 Aug 2013; Tim Harder <radhermit@gentoo.org> +setuptools-1.0.ebuild:
  Version bump.

  18 Aug 2013; Agostino Sarubbo <ago@gentoo.org> setuptools-0.8-r1.ebuild:
  Stable for x86, wrt bug #479980

  13 Aug 2013; Agostino Sarubbo <ago@gentoo.org> setuptools-0.8-r1.ebuild:
  Stable for alpha, wrt bug #479980

  10 Aug 2013; Agostino Sarubbo <ago@gentoo.org> setuptools-0.8-r1.ebuild:
  Stable for ppc64, wrt bug #479980

  10 Aug 2013; Agostino Sarubbo <ago@gentoo.org> setuptools-0.8-r1.ebuild:
  Stable for arm, wrt bug #479980

  10 Aug 2013; Agostino Sarubbo <ago@gentoo.org> setuptools-0.8-r1.ebuild:
  Stable for ppc, wrt bug #479980
