@@ -15,6 +15,7 @@ DIST setuptools-1.0.tar.gz 679533 SHA256 bc4eb71591ca56a3f14627c6fb3f5f25fa674e2
 DIST setuptools-1.1.1.tar.gz 680461 SHA256 630cda76616e9a275251bf00145c21fdf2fdf91c674e7593614623d5dcd93b17 SHA512 f8e2a2f49bb1a5d70a72e1e8a056e966429d0696fbfa7d93594347fcb3af0444cb3b148339164b3130109940306ad5caa387465d6e20a139560f748c0d4c740e WHIRLPOOL 1da14a9a0d37b4fd4ac12faa76c51432234fb9d3e5c35f40db6fced67b1cc4df8fea4274c40e7d1696592a010fd1bca43aa81a68b1fa1f4c3574c89e5e5b5ad4
 DIST setuptools-1.1.3.tar.gz 681085 SHA256 1e9ea5270d1158a96ae9c8d01a9f2276a6fa6d7393b99d46437184c45fa26f6c SHA512 79f081f7118359675d1b585061d874ed60ec08864cbe305bc1aec175742868d7c6d5703195afb3a551b42500a4ec00c855b251b6351eafe320161233b66d6bad WHIRLPOOL 5e7f6268dc39ab5b82bbe57b0ddcc61f8201b15de0916ac38103ddfe371e3c571da68eb7d04144517d2e2860d01eba2a1e3d6e1877ab1d4c78bd23475920bad7
 DIST setuptools-1.1.5.tar.gz 681773 SHA256 04af51ba05bcfb1a6104654bf398eda4ce8c1819ac1334c698dd9bde7afb44f0 SHA512 9ce094777d8db9bfa7959a1da23e2bedb7b9b134dfce2572c1cfd9a08be9e1d67943a757810744166c6f72557d078cb737c985254548f266889ec6079252a976 WHIRLPOOL 495e67e03f8ac509b24000cec677216f71ecc7069b324eff30d44d117f65a6fd3fd7941ebe5416f33426f2b25c1100ab7a49ed58afb239453ec6bce2d81a6cec
+DIST setuptools-1.1.6.tar.gz 681597 SHA256 e5a60b88138def225c29cbf13ee20f1c176f200450e286dcc7d192963a67723a SHA512 68acb06423f23c4f31889af32cb0a238ef1ba708a7097e91e4463175d347bacb545c7631233f6be9bb1ca0501391192e1e752148766da919eb0db1b92f0e5670 WHIRLPOOL 7a9a05d72632cf6799fd04fd55a2c4f231f8e2af681ba74fb65dd074817a2ea1485dbe3eb1707ac53696ea6121536423a71a0c240613d107b9a47c302fe7a4ae
 DIST setuptools-1.1.tar.gz 679747 SHA256 56dde93a410389fc6cb86e9c115249a3414f8982c96d99aeac43a7717dd05b5e SHA512 d3e54351ec6f797e149ab451fbeaa6dce33e98e67c15fd2e029be3842f9cffe178ad890e0ff11753906b3a11d2aa786c3dc8fcf36059370812e1bf59cef7cc02 WHIRLPOOL 66816d55b3e45a9abb3379863752a164b24e3d55743bf2ea9828ca6dc0a0165cd9501905947b0890f1791dd230b0e8b810363d0b11eb193bcdea5605a6239fc1
 EBUILD setuptools-0.6.21.ebuild 1780 SHA256 306a43182e7ed56125f5e54948a26013838e5bf5199b236f1bd6eb7e9c516603 SHA512 210f852916299ab285bbdd10fed231e4ad2bd50bbbb444970536419357f436db1c90b1c0be31b81f92a67a1b0f13267375f742592981207ecd0ed0aaebd695d9 WHIRLPOOL 6e880724874f156be6f3b318e9514a1572087508ad1734bcee162d0ac26eb287a7f630b2303bad3dacd094a466fcc19a97a513b9ba0ec8d604da976910ba8b5e
 EBUILD setuptools-0.6.30-r1.ebuild 1553 SHA256 6710e694f0d8532ab6864919bbe700d5e01907db11f6758b458d087f839977cc SHA512 02a1afa2ccb1002a50f0312ec98acd29f4d7ef29a40ffd9b89d8328fc36281fcbfb1f52832a4704128450ed88c640c4791cd249d22445c85217f499d76d132c5 WHIRLPOOL 10fe028faee8c0611f1493f7cee574d12c8f7f00d042d0ee6df17e8bbd0a26c2d98bb978051dfe4689a377847923a6d5810ca912b74e19cd35e23603430bc7c0
@@ -26,18 +27,19 @@ EBUILD setuptools-1.0.ebuild 1369 SHA256 0bae116b93379ae83c468b8a7a2f346ec505879
 EBUILD setuptools-1.1.1.ebuild 1374 SHA256 338d73026dd503ffbdf260a33db2facb1f59e0bbb8937e694e750e510584790e SHA512 c01dafb2ad41facb7128a99729808c10abd55976cf18b2890659821e95cb13819717b0f15d07f1016affaf37a5da1c9eda2d1e6930e80f3514fd604205d49ae6 WHIRLPOOL f044b307a0945d3a58a72684d6a175198d355c13e6d334a82c94d8ba3fd567d743891b44b2f1bb3ff6e0b5a4cdcf9e7c0fac4a93f5c92d5eda11e6184762fd98
 EBUILD setuptools-1.1.3.ebuild 1374 SHA256 3599b173264e81cfecc84f7cfd22d76a31b6d6e030858e3f355ebb78e5e9ee7f SHA512 994073938cea9fd465e0dc6fc5c7d21d244aec6dc137265ed0e5637e02f7657e0d024173db9ce968ad3caf45c148ec9d55c8139e5add5416e1400d9dc182071b WHIRLPOOL 905640a7cc6d653d6a7c93f34d7f2c4f34f2d43a835c76b93282dce2ca71895a4f415b03717e07dfc40b3a4e94fcec534fc84868d574e66a00b18877ea22d244
 EBUILD setuptools-1.1.5.ebuild 1374 SHA256 f51d6dbb4bfbddae37707a7092b466d30a38abfbaa78bcbbf8a588377a016a3e SHA512 54c04c5d1b1f6cc7342cd8c7b77704df446c35ee47796d0246eebebe4388e32499be0f629ba3375b653021d1c99c3caa4e2ac633c26313c49892d67bc3dfa937 WHIRLPOOL 48cb105c76304042788b2fc53207bf139304ad204e8e6f79d0a5329407d9bc1b11809291a72dc5115030b5776d667b0f705efda4f5d122cd7592d75b02e2341d
+EBUILD setuptools-1.1.6.ebuild 1374 SHA256 224c7fa0f080ac3cb1dccb6dfd188734f877a9c2edf874e319249e1340411d4f SHA512 75b23cb546de5c6a1a0974cd454e4b91578f674698d959a322a2874bbafc558bc6929e6aff6cb04a44b127f7f85083a7ac1209b0b65598ac82bae5bcc81c0d8b WHIRLPOOL 5ddaefd352d966991d46a4e5102fe74fe7afd757266b2eba647d4a7b7493abe9e3557c962a4d804586f2265d150b8617abc06828c2220d5d4e2a648f6d1a3844
 EBUILD setuptools-1.1.ebuild 1369 SHA256 2b828a05946e800531b343108d6b8e44b6e4d6ed84ffbffb8cfd91dd0962fd33 SHA512 68250c24a646c35703f8a78c5a6c2bbda9eea7efc43b361fc92914fca3cca3a2229e9b11da30c29f6313844d429ba847e0a165d1190a66aaa57003fe484ff2b1 WHIRLPOOL 5ed0cfff26095a3dc0ffc09ce599657d012fb2ab6bcdfdcb753e363d2c7f0988b672c1468c2b5dee0153e1313977da978b364cfd1a10684e5e08a9a164ca13cc
 EBUILD setuptools-9999.ebuild 1496 SHA256 1e5b5ab1a49fb95735d27c93ad64ab1a5f0e3406a5549a52d5454d81ddc65c7a SHA512 2f58313bec49e0b81f2f91044674943931e4ad88bb3edb23a0db97bfd4c2bb4cca5a98b0164cecaf2fa080ff17a86923366a96579f69cb5e37854ec208ad645c WHIRLPOOL 7e183de8b9e890795f1f12ffefd6d80f38204785dca3e7de53f2b5a1763cad74ef56cb2869ec8fff860153d6149308d17961f30d8ee5e12331b74bb73979dce4
-MISC ChangeLog 31311 SHA256 e1c84bcac17f09df2e172e7c160212a78a084836d951cfeeeed275e6c6b6dbe4 SHA512 020142c762201f1ef61d445407d1875d1fc755c8efbeec0456fb57929394c086de8c815f11003ab83a70b6ba9ef01e26ebd0c6cbed7c2de231ba747e584c5711 WHIRLPOOL a1b481700ea86d0826f62e5b96f8962e7dcb9759d7e26faa2cccebf54ed8c52d4905dc966d9f5955cac21fab47aba8c1d5291267e7f34771bb5f3a14a9176339
+MISC ChangeLog 31436 SHA256 cc1fc0200940972448b6f8746a5f954b989a1df00fe00532e828d165b83bfded SHA512 4f527ce306ae093f26a413565ca1f3989b0f7825c7c5ccd74b3b86d5d6261af53b54fc3bbbfd6551a883ae5c0c94b618a1d6c4dd80235e76a88748704ed58231 WHIRLPOOL 2f5d7bd0bf9caeb9d2897c3b60283817b389881d0dbaee0dc1f71a386a5a4eb8f010c7ffc148dc24f84b884897a41ce229b28aee87499ed4b773d03e98e58426
 MISC metadata.xml 233 SHA256 6dc0849682824e3bb8e7b092b59c0c49a7df79b6496086559a4b4bbf1a8bc586 SHA512 4c547bff28a5f545edec812745a83e42a044f7117a21bc5f417b91e48e61095194003760813b03c557004a3c9c669aa8ec50988eb4a3a106cfcb4e1063a0ef30 WHIRLPOOL a846059cf244c81e8d8ff01d667d0ced9a32d31bab77a25765a7c88eecefc3f7a4370939a9bcbb1822f3f35c182afe0e83693b241a2aa703597f15649baa00cb
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.21 (GNU/Linux)
 
-iQEcBAEBCAAGBQJSNp1AAAoJEEqz6FtPBkyjl20IAJW9Nq2XmfsOTMw3mq0U0Sr+
-Dx7CYMyh5ymJRco50LbtFOMkFdqGBr43pSRBna+SqP2Zv8m46ZKCT6qRk6f+rlCY
-VPfUPQMqaRoTSejAabMnSYHjfKNpIHECFkkMQ3PWwV0ikaeyJWObixEI0OtUCR1B
-+zkhLRqDsmNJtyMC1nbwf8HH6xYdi4GHTh/9IAlaw27jmT82jDBCkHcuJQ1WhCPc
-3zPx1rDKapx6css1h/XRj03g5OjitYU2bfgLUvfxLQAq/kATepEBRl1tGmWQZA6D
-0pDlImy6GizLQAipi8UhV3vQD1oTHBzpeqsSdvDHlcqscI81NHsIZkiGyS3enN0=
-=poI+
+iQEcBAEBCAAGBQJSQQ+MAAoJEEqz6FtPBkyjvV8H/jFn4LPm1itDJbOklCDCLCSH
+1MiS19gFz7FvIqbt5U6ZZh7Bf8ebDQ5Nkzw2DLFYYS40raFD5g4QDYX2W940/nd3
+smeiupkoOr46ncDue5q2A/f1EUIFhbpkYuKHcKUBXv4jIyIKquuIomamSu+tlInD
+zRp8Z0jiVuRhMsVUtwAhT+hmhFdj6+v2RHScehVy4G7QPBcWeCmXg/XTtl1PfL7F
+VuBYJyxvv5BMiW4dAK7LQkCKo1QK+lg5a0ctBFcNtm2YgdcpMVVspBFwtzmoJqrK
+Q7Lg+hQogHsA1oGPIqfynzFfa0Z+SueAXT8rfUSup8GNtqD1pbV+N1yIGDO0xWg=
+=X4jA
 -----END PGP SIGNATURE-----
