@@ -1,6 +1,11 @@
 # ChangeLog for dev-python/setuptools
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/setuptools/ChangeLog,v 1.216 2013/09/16 05:55:08 radhermit Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/setuptools/ChangeLog,v 1.217 2013/09/24 04:05:28 radhermit Exp $
+
+*setuptools-1.1.6 (24 Sep 2013)
+
+  24 Sep 2013; Tim Harder <radhermit@gentoo.org> +setuptools-1.1.6.ebuild:
+  Version bump.
 
 *setuptools-1.1.5 (16 Sep 2013)
 
